[gd_scene format=3 uid="uid://pausemenu001"]

[ext_resource type="Script" path="res://scripts/ui/PauseMenu.gd" id="1_script"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -80.0
offset_right = 120.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="LabelPaused" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "PAUSED"
horizontal_alignment = 1

[node name="BtnResume" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Resume Game"

[node name="BtnSaveQuit" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Save & Quit to Title"
